Update the Web App with Mars’s Hemisphere Images and Titles

--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -90,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">Robotic Toolkit Added to NASA's Mars 2020 Rover</div>"
+       "<div class=\"content_title\">NASA's New Mars Rover Will Use X-Rays to Hunt Fossils</div>"
       ]
      },
      "execution_count": 5,
@@ -110,7 +110,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Robotic Toolkit Added to NASA's Mars 2020 Rover\""
+       "\"NASA's New Mars Rover Will Use X-Rays to Hunt Fossils\""
       ]
      },
      "execution_count": 6,
@@ -132,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "\"The bit carousel, which lies at the heart of the rover's Sample Caching System, is now aboard NASA's newest rover. \""
+       "\"PIXL, an instrument on the end of the Perseverance rover's arm, will search for chemical fingerprints left by ancient microbes.\""
       ]
      },
      "execution_count": 7,
@@ -214,9 +214,9 @@
        "<h2 class=\"brand_title\">FEATURED IMAGE</h2>\n",
        "<h1 class=\"media_feature_title\">Dusty Space Cloud</h1>\n",
        "<br/>\n",
-       "<a class=\"showimg fancybox-thumbs\" href=\"image/featured/mars1.jpg\" target=\"_blank\"> <button class=\"btn btn-outline-light\"> FULL IMAGE</button></a>\n",
+       "<a class=\"showimg fancybox-thumbs\" href=\"image/featured/mars3.jpg\" target=\"_blank\"> <button class=\"btn btn-outline-light\"> FULL IMAGE</button></a>\n",
        "</div>\n",
-       "<img class=\"headerimage fade-in\" src=\"image/featured/mars1.jpg\"/></div>\n",
+       "<img class=\"headerimage fade-in\" src=\"image/featured/mars3.jpg\"/></div>\n",
        "<div class=\"search sticky\">\n",
        "<div class=\"col-md-12\">\n",
        "<div class=\"row\">\n",
@@ -388,7 +388,7 @@
        "<link href=\"js/fancyBox/jquery.fancybox.css?v=2.1.5\" media=\"screen\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<link href=\"js/fancyBox/helpers/jquery.fancybox-thumbs.css?v=1.0.7\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<script src=\"js/fancyBox/helpers/jquery.fancybox-thumbs.js?v=1.0.7\" type=\"text/javascript\"></script>\n",
-       "<div class=\"fancybox-overlay fancybox-overlay-fixed\" style=\"width: auto; height: auto; display: block;\"><div class=\"fancybox-wrap fancybox-desktop fancybox-type-image\" style=\"width: 670px; height: 380px; position: absolute; top: 88px; left: 265px; opacity: 0.102875; overflow: hidden;\" tabindex=\"-1\"><div class=\"fancybox-skin\" style=\"padding: 15px; width: auto; height: auto;\"><div class=\"fancybox-outer\"><div class=\"fancybox-inner\" style=\"overflow: visible; width: 640px; height: 350px;\"><img alt=\"\" class=\"fancybox-image\" src=\"image/featured/mars1.jpg\"/></div></div></div></div></div></body></html>"
+       "<div class=\"fancybox-overlay fancybox-overlay-fixed\" style=\"width: auto; height: auto; display: block;\"><div class=\"fancybox-wrap fancybox-desktop fancybox-type-image\" style=\"width: 670px; height: 380px; position: absolute; top: 88px; left: 265px; opacity: 0.106946; overflow: hidden;\" tabindex=\"-1\"><div class=\"fancybox-skin\" style=\"padding: 15px; width: auto; height: auto;\"><div class=\"fancybox-outer\"><div class=\"fancybox-inner\" style=\"overflow: visible; width: 640px; height: 350px;\"><img alt=\"\" class=\"fancybox-image\" src=\"image/featured/mars3.jpg\"/></div></div></div></div></div></body></html>"
       ]
      },
      "execution_count": 10,
@@ -411,7 +411,7 @@
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars1.jpg'"
+       "'image/featured/mars3.jpg'"
       ]
      },
      "execution_count": 11,
@@ -433,7 +433,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
       ]
      },
      "execution_count": 12,
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -692,16 +692,12 @@
    "source": [
     "# Set the executable path and initialize Splinter\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
-    "browser = Browser('chrome', **executable_path, headless=False)\n",
-    "\n",
-    "# 1. Use browser to visit the URL \n",
-    "url = 'https://marshemispheres.com/'\n",
-    "browser.visit(url)"
+    "browser = Browser('chrome', **executable_path, headless=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +748,7 @@
        "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
